changed neustart button to hauptmenü button

--- a/cleaning_game.html
+++ b/cleaning_game.html
@@ -185,7 +185,7 @@
         <button id="tax-popup-button"></button>
     </div>
     
-    <button id="restart-btn" style="display: none; position: fixed; bottom: 20px; left: 20px; z-index: 300; background: #4CAF50; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 5px; font-size: 14px; box-shadow: 0 2px 10px rgba(0,0,0,0.3);">Neustart</button>
+    <button id="restart-btn" style="display: none; position: fixed; bottom: 20px; left: 20px; z-index: 300; background: #4CAF50; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 5px; font-size: 14px; box-shadow: 0 2px 10px rgba(0,0,0,0.3);">Hauptmenü</button>
 
     <script>
         const canvas = document.getElementById('canvas');
@@ -1963,7 +1963,9 @@ canvas.addEventListener('touchcancel', () => {
         window.addEventListener('resize', () => { if (!animationComplete) { resetCanvasToViewport(); gridCols = calcGridCols(); gridRows = calcGridRows(); } });
 
         document.getElementById('tax-popup-button').addEventListener('click', handleTaxPopupButton);
-        document.getElementById('restart-btn').addEventListener('click', reset);
+        document.getElementById('restart-btn').addEventListener('click', () => {
+            window.location.href = "index.html";
+        });
 
         // Start animation loop (will be paused in manual mode until cascade button is pressed)
         animationPaused = manualMode;
