--- a/cleaning_game.html
+++ b/cleaning_game.html
@@ -289,7 +289,7 @@
 
         function getTutorialText() {
             if (tutorialPhase === 2) {
-                return "Die Krankenkassenprämien sind um 20% gestiegen. Schaffst du es noch durch das 2. Jahr?";
+                return "Die Krankenkassenprämien sind um 20% gestiegen. Schaffst du es auch noch durch das 2. Jahr";
             }
             return "Schrubbe mit dem Schwamm über die schmutzigen Kalender, um sie zu reinigen!";
         }
