--- a/cleaning_game.html
+++ b/cleaning_game.html
@@ -354,7 +354,7 @@
         <h2>Zahlungsverzug</h2>
 
         <p id="mahnung-text" style="color:#d7d7d7; font-size:16px; line-height:1.4; margin-bottom:22px;">
-            Auf was verzichtest du, um die Mahnung zu bezahlen?
+            Auf was verzichtest du, um die Rechnung plus Mahngebüren zu bezahlen?
         </p>
 
         <div id="gameover-options">
