added link to info.html

--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@
         </div>
         <div class="pea-wheel" id="peaWheel"></div>
         <div class="subtle-description">Nimm das Erbs-Schafts-Steuer in die Hand!</div>
+        <div style="opacity:0.45; font-size:14px; margin-top:0px;">
+            <a href="info.html" style="color:inherit; text-decoration:underline; cursor:pointer;">
+                Mehr Informationen
+            </a>
+        </div>
+
     </main>
     <script>
 const wheel = document.getElementById("peaWheel");
