text edits on info.html

--- a/info.html
+++ b/info.html
@@ -131,7 +131,7 @@
         <section>
             <h2>Ziel des Spiels</h2>
             <p>
-                Das Spiel soll die grossen Unterschiede zwischen normalem Erwerbseinkommen und Einkommen durch Erbschaften sichtbar machen – insbesondere, dass selbst unter der vorgeschlagenen <a href="https://www.efd.admin.ch/de/abstimmung-juso-initiative">Erbschaftssteuer-Initiative</a> vom 30. November 2025 Erbschaften weiterhin steuerfrei bleiben würden. Damit wird hervorgehoben, dass in vielen Kantonen bereits relativ geringe Erwerbseinkommen merklich besteuert werden, während nicht erarbeitete Erbschaften vollständig steuerbefreit bleiben.
+                Das Spiel soll die enormen Dimensionsunterschiede zwischen normalem Erwerbseinkommen und von Erbschaften, die selbst bei Annahme der kommenden <a href="https://www.efd.admin.ch/de/abstimmung-juso-initiative">Erbschaftssteuer-Initiative</a> vom 30. November 2025 nicht besteuert würden, aufzuzeigen. Es soll darauf aufmerksam machen, dass in den meisten Kantonen bereits niedriges, erarbeitetes Erwerbseinkommen einer spürbaren Besteuerung unterliegen, während Einkommen durch Erbschaften, welches nicht mit Arbeit verdient wurde, komplett steuerfrei bleibt.
             </p>
         </section>
 
