further text tweaks, info button at game end

--- a/info.html
+++ b/info.html
@@ -55,7 +55,7 @@
             font-weight: 600;
         }
         h1 {
-            font-size: 36px;
+            font-size: clamp(24px, 7vw, 36px);
             text-align: center;
         }
         p {
@@ -111,7 +111,7 @@
             <h2>Lohnbasis</h2>
             <p>
                 Die im Spiel verwendeten Löhne beruhen auf offiziellen Statistiken des Bundesamts für Statistik (BFS). Grundlage bildet der Datensatz 
-                <a href="https://www.bfs.admin.ch/bfs/de/home/statistiken/arbeit-erwerb/loehne-erwerbseinkommen-arbeitskosten/lohnstruktur/berufsgruppen.assetdetail.32030257.html">Monatlicher Bruttolohn nach Grossregion, Berufsgruppe, Alter und Geschlecht</a> von 2022. Die folgenden Medianlöhne wurden geschlechter- und altersübergreifend ermittelt und auf die nächsten 1'000 CHF gerundet:
+                <a href="https://www.bfs.admin.ch/bfs/de/home/statistiken/arbeit-erwerb/loehne-erwerbseinkommen-arbeitskosten/lohnstruktur/berufsgruppen.assetdetail.32030257.html">Monatlicher Bruttolohn nach Grossregion, Berufsgruppe, Alter und Geschlecht</a> von 2022. Die folgenden Medianlöhne wurden geschlechter- und altersübergreifend ermittelt und auf 1'000 CHF genau gerundet:
             </p>
 
             <table>
@@ -125,14 +125,14 @@
         <section>
             <h2>Steuerberechnung</h2>
             <p>
-                Die Einkommenssteuerwerte wurden über den Steuerkalkulator des Kanton Luzerns (Gemeinde: Stadt Luzern) berechnet. Sie beinhalten Gemeinde-, Kantons-, Bundes- sowie römisch-katholische Kirchensteuer. Da alle Löhne bereits gerundet sind, wurden keine zusätzlichen Abzüge berücksichtigt. Die resultierenden Steuerbeträge wurden wiederum auf die nächsten 1'000 CHF gerundet.
+                Die Einkommenssteuerwerte wurden über den Steuerkalkulator des Kanton Luzerns (Gemeinde: Stadt Luzern) berechnet. Sie beinhalten Gemeinde-, Kantons-, Bundes- sowie römisch-katholische Kirchensteuer. Da alle Löhne bereits abgerundet sind, wurden keine zusätzlichen Abzüge berücksichtigt. Die resultierenden Steuerbeträge wurden wiederum auf 1'000 CHF genau gerundet.
             </p>
         </section>
 
         <section>
             <h2>Ziel des Spiels</h2>
             <p>
-                Das Spiel soll darauf aufmerksam machen, dass in den meisten Kantonen bereits niedriges, erarbeitetes Erwerbseinkommen einer spürbaren Besteuerung unterliegen, während Einkommen durch Erbschaften, welche nicht mit Arbeit verdient wurden, komplett steuerfrei bleiben.
+                Das Spiel soll darauf aufmerksam machen, dass bereits niedriges, erarbeitetes Erwerbseinkommen einer spürbaren Besteuerung unterliegen, während Einkommen durch Erbschaften, welche nicht mit Arbeit verdient wurden, in den meisten Kantonen komplett steuerfrei bleiben.
             </p>
             <p>    
                 Auch bei Annahme der kommenden <a href="https://www.efd.admin.ch/de/abstimmung-juso-initiative">Erbschaftssteuer-Initiative</a> vom 30. November 2025 würden Erbschaften bis 50 Millionen, wie in diesem Spiel dargestellt, nicht besteuert.
