further endscreen updates

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="job-icon">🧽</div>
             <div class="job-info">
                 <div class="job-title">Reinigungskraft</div>
-                <div class="job-salary">Monatliches Gehalt: <br> 4'000.- (4 x <span style="font-size: 14px;">🟢</span>)</div>
+                <div class="job-salary">Monatliches Gehalt: <br> 4'000.- (4 x 🟢)</div>
             </div>
         </div>
         <div class="job-card placeholder" onclick="location.href='newsletter.html'">
