--- a/cleaning_game.html
+++ b/cleaning_game.html
@@ -56,7 +56,7 @@
             position: fixed;
             top: 30px;
             left: 50%;
-            transform: translate(-50%, 0);
+            transform: translate3d(-50%, 0, 0);
             width: min(80vw, 460px);
             background: rgba(0, 0, 0, 0.72);
             color: #FFD700;
@@ -65,7 +65,6 @@
             font-size: clamp(14px, 4vw, 16px);
             font-weight: 500;
             z-index: 100;
-            animation: fadeInBounce 1s ease-out;
             pointer-events: none;
             box-shadow: 0 6px 24px rgba(0, 0, 0, 0.35);
             backdrop-filter: blur(10px);
@@ -76,20 +75,7 @@
         }
         #scroll-indicator.hidden {
             opacity: 0;
-            transform: translate(-50%, -24px);
-        }
-        @keyframes fadeInBounce {
-            0% { 
-                opacity: 0;
-                transform: translateX(-50%) translateY(-20px);
-            }
-            60% {
-                transform: translateX(-50%) translateY(5px);
-            }
-            100% { 
-                opacity: 1;
-                transform: translateX(-50%) translateY(0);
-            }
+            transform: translate3d(-50%, -24px, 0);
         }
 
         @media (max-width: 480px) {
@@ -376,8 +362,8 @@
 
 
     
-    <button id="restart-btn" style="visibility: hidden; opacity:0; transition:opacity 0.8s ease; position: fixed; bottom: 20px; left: 20px; z-index: 300; background: rgba(26, 26, 26, 0.6); color: white; border: none; width: 105px; padding: 10px; cursor: pointer; border-radius: 10px; font-size: 14px; box-shadow: 0 2px 10px rgba(0,0,0,0.3);">Hauptmenü</button>
-    <button id="info-btn" style="visibility: hidden; opacity:0; transition:opacity 0.8s ease; position: fixed; bottom: 20px; right: 20px; z-index: 300; background: rgba(26, 26, 26, 0.6); color: white; border: none; width: 105px; padding: 10px; cursor: pointer; border-radius: 10px; font-size: 14px; box-shadow: 0 2px 10px rgba(0,0,0,0.3);">Mehr Info</button>
+    <button id="restart-btn" style="visibility: hidden; opacity:0; transition:opacity 0.8s ease; position: fixed; bottom: 20px; left: calc(50% - 115px); z-index: 300; background: rgba(26, 26, 26, 0.6); color: white; border: none; width: 105px; padding: 10px; cursor: pointer; border-radius: 10px; font-size: 14px; box-shadow: 0 2px 10px rgba(0,0,0,0.3);">Hauptmenü</button>
+    <button id="info-btn" style="visibility: hidden; opacity:0; transition:opacity 0.8s ease; position: fixed; bottom: 20px; right: calc(50% - 115px); z-index: 300; background: rgba(26, 26, 26, 0.6); color: white; border: none; width: 105px; padding: 10px; cursor: pointer; border-radius: 10px; font-size: 14px; box-shadow: 0 2px 10px rgba(0,0,0,0.3);">Mehr Info</button>
 
 
     <script>
@@ -885,7 +871,7 @@
         
         // Heritage event state
         let heritageEventTriggered = false;
-        let postCascadeTaxDelay = 1000; // Delay after cascade completes before showing tax popup (in ms)
+        let postCascadeTaxDelay = 500; // Delay after cascade completes before showing tax popup (in ms)
 
         const PEA_SIZE = 12;
         const PEA_RADIUS = PEA_SIZE / 2;
@@ -1052,7 +1038,7 @@
 
             setTimeout(() => {
                 scrollIndicator.classList.remove('hidden');
-                scrollIndicator.innerHTML = 'Nach oben scrollen um deinen ganzen Reichtum zu entdecken';
+                scrollIndicator.textContent = 'Nach oben scrollen um deinen ganzen Reichtum zu entdecken';
             }, 100);
         }
 
