--- a/info.html
+++ b/info.html
@@ -101,7 +101,7 @@
 </head>
 <body>
     <div class="top-bar">
-        <div class="subtle-title">Erbs-Schafts-Steuer-Simulator</div>
+        <a class="subtle-title" href="index.html" style="color: inherit; text-decoration: none;">Erbs-Schafts-Steuer-Simulator</a>
     </div>
 
     <main class="content">
