--- a/danke-confirm.html
+++ b/danke-confirm.html
@@ -21,6 +21,29 @@
             padding: 100px 40px 40px;
         }
 
+        .top-bar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            padding: 18px 0;
+            background: rgba(0, 0, 0, 0.55);
+            backdrop-filter: blur(10px);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 20;
+        }
+
+        .subtle-title {
+            font-size: clamp(12px, 4vw, 24px);
+            opacity: 0.65;
+            margin: 0;
+            letter-spacing: 1.8px;
+            text-transform: uppercase;
+        }
+
         h1 {
             font-size: clamp(26px, 7vw, 48px);
             margin-bottom: 40px;
@@ -47,6 +70,10 @@
     </style>
 </head>
 <body>
+
+    <div class="top-bar">
+        <a class="subtle-title" href="index.html" style="color: inherit; text-decoration: none;">Erbs-Schafts-Steuer-Simulator</a>
+    </div>
 
     <h1>Vielen Dank für die Anmeldung!</h1>
 
