--- a/testing/sharing-buttons.html
+++ b/testing/sharing-buttons.html
@@ -58,6 +58,7 @@
             letter-spacing: 0.5px;
             margin: 0;
             line-height: 1.4;
+            padding: 0 25px;
         }
         h1 {
             font-size: clamp(24px, 9vw, 56px);
@@ -163,8 +164,8 @@
         }
         .pea-wheel {
             position: relative;
-            width: clamp(160px, 55vw, 360px);
-            height: clamp(160px, 55vw, 360px);
+            width: clamp(130px, 36vw, 280px);
+            height: clamp(130px, 36vw, 280px);
             margin-top: clamp(8px, 2vh, 14px);
             margin-bottom: clamp(20x, 7vh, 24px);
             transform-origin: 50% 50%;
