small text edits

--- a/testing/teacher_game.html
+++ b/testing/teacher_game.html
@@ -505,16 +505,16 @@
         const examQuestions = [
             { subject: 'Mathematik', content: 'Eine Putzkraft verdient monatlich 4\'000 CHF. Wenn sie 20 Jahre Lang arbeitet, wie viel hat sie dafür verdient?', answer: '50 Millionen' },
             { subject: 'Gesellschaft', content: 'Wofür steht das sogenannte NEID-Argument im politischen Diskurs?', answer: 'Normalisierung extremer Inäquitäts-Dimensionen' },
-            { subject: 'Musik', content: '', answer: 'A B G A B E&emsp;&emsp;E B B E', sheetMusic: 'abgabe-ebbe' },
+            { subject: 'Musik', content: '', answer: '&emsp;E B F A F D&emsp;&emsp;A B G A B E', sheetMusic: 'ebfafd-abgabe' },
             { subject: 'Biologie', content: 'Welche Speisepflanze trägt den wissenschaftlichen Namen "Pisum sativum"?', answer: 'Bohne' },
             { subject: 'Mathematik', content: `
 <div style="display:flex; align-items:flex-start; gap:10px;">
   <div style="flex:1;">
-    Ein Einfrankenstück wiegt 4,4 gramm. Wie viel Gewicht tragen Steuerflüchtende mindestens über die Grenze, damit sie von der Erbschaftssteuerinitiative betroffen sind?
+    Ein Einfrankenstück wiegt 4,4 gramm. Wie viel Gewicht tragen Betroffene der Erbschaftssteuerinitiative auf der Steuerflucht als Einfränkler mindestens auf dem Rücken?
   </div>
   <img src="einfranken.png" style="width:60px;">
 </div>
-`, answer: '220 Tonnen'
+`, answer: '4.4g x 50\'000\'000 = 220 Tonnen'
  },
             { subject: 'Wirtschaft', content: 'Wieviel Startguthaben erhälst du als Spieler in der klassischen Variante von Monopoly?', answer: '50 Millionen und Zürich Paradeplatz' },
                         { subject: 'Kunst', content: `
@@ -534,21 +534,24 @@
         ];
 
         const ABGABE_EBBE_SEQUENCE = [
+            { keys: ['e/4'], duration: 'q' },
+            { keys: ['b/4'], duration: 'q', accidentals: [{ index: 0, type: 'b' }] },
+            { keys: ['f/4'], duration: 'q',},
+            { keys: ['a/4'], duration: 'q' },
+            { keys: ['f/4'], duration: 'q',},
+            { keys: ['d/4'], duration: 'q',},
+            { rest: true, duration: 'qr' },
             { keys: ['a/4'], duration: 'q' },
             { keys: ['b/4'], duration: 'q', accidentals: [{ index: 0, type: 'b' }] },
             { keys: ['g/4'], duration: 'q' },
             { keys: ['a/4'], duration: 'q' },
             { keys: ['b/4'], duration: 'q', accidentals: [{ index: 0, type: 'b' }] },
-            { keys: ['e/4'], duration: 'q' },
-            { rest: true, duration: 'qr' },
-            { keys: ['e/4'], duration: 'q' },
-            { keys: ['b/4'], duration: 'q', accidentals: [{ index: 0, type: 'b' }] },
-            { keys: ['b/4'], duration: 'q', accidentals: [{ index: 0, type: 'b' }] },
-            { keys: ['e/4'], duration: 'q' }
+            { keys: ['e/4'], duration: 'q' },            
+
         ];
 
         const SHEET_SEQUENCES = {
-            'abgabe-ebbe': ABGABE_EBBE_SEQUENCE
+            'ebfafd-abgabe': ABGABE_EBBE_SEQUENCE
         };
 
         let currentYear = 1;
@@ -860,12 +863,12 @@
         function drawSheetSequence(target, sequence, VF) {
             target.innerHTML = '';
             const rawWidth = target.clientWidth || target.offsetWidth || 260;
-            const width = Math.min(440, Math.max(320, rawWidth));
+            const width = Math.min(440, Math.max(300, rawWidth));
             const height = 80;
             const renderer = new VF.Renderer(target, VF.Renderer.Backends.SVG);
             renderer.resize(width, height);
             const context = renderer.getContext();
-            const stave = new VF.Stave(2, -20, width - 12);
+            const stave = new VF.Stave(2, -20, width);
             stave.addClef('treble');
             stave.setEndBarType(VF.Barline.type.DOUBLE);
             stave.setContext(context).draw();
@@ -875,7 +878,8 @@
             voice.setMode(VF.Voice.Mode.SOFT);
             voice.addTickables(notes);
  
-            new VF.Formatter().joinVoices([voice]).format([voice], width - 90);
+            voice.setMode(VF.Voice.Mode.FULL);
+            new VF.Formatter().joinVoices([voice]).format([voice], width - 50);
             voice.draw(context, stave);
         }
  
